# sikaltar

./: Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  gitignore  nginx.conf  setup.bat  test_sikaltara.db
backend/: .env  .env.example  Dockerfile  alembic.ini  create_admin.py  jalankan.bat  migrasi.bat  pyproject.toml  seed_data.py  seed_tanaman_pangan.py  seed_uji_coba.py
backend/app/: __init__.py  database.py  main.py
backend/app/api/: input_adjustment.py  input_deflator_sse.py  input_harga.py  input_ihp.py  input_produksi.py  input_rasio.py  master_komoditas.py  master_summary.py  mdm_audit.py  mdm_faktor_konversi.py  mdm_kategori.py  mdm_klasifikasi.py  mdm_komoditas.py  mdm_metode.py  mdm_satuan.py  referensi.py  s2.py  s3.py
backend/app/dependencies/: __init__.py  auth.py  auth_sse.py
backend/app/models/: __init__.py  hasil.py  input_data.py  kategori_pdrb.py  komoditas.py  master.py  rasio.py  user.py  wilayah.py
backend/app/routers/: __init__.py  admin_users.py  auth.py
backend/app/schemas/: adjustment.py  harga.py  ihp.py  produksi.py  rasio_deflator.py  user.py
backend/app/services/: agregasi_service.py  cascade_service.py  kalkulasi_service.py  mdm_audit_service.py  mdm_import_service.py  rasio_service.py
backend/app/services/kalkulasi/: base.py  (+3 more)
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 001_create_tables.py  002_seed_wilayah_kategori.py  003_seed_rasio_referensi.py  004_mdm_tables.py  005_add_users.py  (+1 more)
backend/tests/: test_kalkulasi_service.py  test_rasio_service.py
(+48 files in other folders)
