[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simultan-backend"
version = "1.0.0"
description = "Sistem LK PDRB Provinsi Kalimantan Utara — BPS Indonesia"
# readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",      # PostgreSQL driver
    # Async task queue
    "celery>=5.3.6",
    "redis>=5.0.4",
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",           # Structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",               # TestClient untuk FastAPI
    "factory-boy>=3.3.0",          # Test fixtures
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["app"]
